# relaydesk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: comment-cleanup-spec.md  packaging-fix-spec.md  rename-to-baton-spec.md
docs/superpowers/plans/: 2026-07-09-web-frontend-phase2-visual.md  2026-07-09-web-frontend-refactor.md
docs/superpowers/specs/: 2026-07-09-web-frontend-phase2-visual-design.md  2026-07-09-web-frontend-refactor-design.md
langgraph_cs/: .env.example  .gitignore  README.md  __init__.py  config.py  graph.py  main.py  requirements.txt  state.py
langgraph_cs/business/: __init__.py  db.py
langgraph_cs/business/tests/: __init__.py  test_business_offline.py
langgraph_cs/data/faq/: account.md  billing_refund.md  membership_general.md  orders_shipping.md  technical_support.md
langgraph_cs/eval/: __init__.py  answer_dataset.json  answer_eval.py  answer_results.md  dataset.json  langsmith_eval.py  results.md  run_eval.py  tool_dataset.json  tool_dataset_hard.json  tool_eval.py  tool_hard_probe.md  tool_hard_results.md  tool_results.md
langgraph_cs/nodes/: __init__.py  agent.py  escalation.py  intent.py  rag.py  router.py  tools.py  utils.py
langgraph_cs/nodes/tests/: __init__.py  test_agent_tools_offline.py  test_config_offline.py  test_intent_offline.py  test_rag_offline.py  test_tools_offline.py
langgraph_cs/rag/: __init__.py  bm25.py  embeddings.py  rerank.py  store.py
langgraph_cs/scripts/: ingest_faq.py  seed_business_db.py  verify_persistence.py
langgraph_cs/tests/: __init__.py  test_cli_offline.py
langgraph_cs/web/: __init__.py  __main__.py  server.py
langgraph_cs/web/static/: app.js  index.html  style.css
langgraph_cs/web/static/js/: dom.js  messages.js  pipeline.js  pure.js  session.js  sse.js  theme.js
langgraph_cs/web/templates/: index.html
langgraph_cs/web/tests/: __init__.py  test_markdown.mjs  test_server_offline.py  test_theme.mjs
