[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-cs-agent"
version = "0.1.0"
description = "用 LangGraph 从零搭建的多 Agent 智能客服：意图识别 → RAG 检索 → 条件路由 → 人工介入 → 持久化 → 评测 → Web 界面"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steven Li" }]
keywords = ["langgraph", "rag", "customer-service", "multi-agent", "deepseek"]

# 依赖镜像 langgraph_cs/requirements.txt 的版本下限（保持单一事实来源：改一处时两处同步）。
# 精确锁定版本见仓库根 requirements.lock（pip freeze 产物，可复现安装环境）。
dependencies = [
    # 阶段 2 骨架
    "langgraph>=0.2.40",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.1",
    # 阶段 3 RAG（检索地基）
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.0",
    "httpx>=0.27.0",
    # 阶段 3 RAG（BM25 弱检索器对照）
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    # 阶段 4 持久化 + 可观测/评测
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.9.0",
    # 阶段 5 Web 演示
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
# 控制台入口：装上本包后可直接用命令启动（等价于 python -m ... 方式，后者仍可用）。
langgraph-cs-web = "langgraph_cs.web.__main__:main"
langgraph-cs = "langgraph_cs.main:main"

[tool.setuptools]
# 显式列出顶层包，让 setuptools 找到 langgraph_cs 及其子包。
packages = [
    "langgraph_cs",
    "langgraph_cs.nodes",
    "langgraph_cs.rag",
    "langgraph_cs.eval",
    "langgraph_cs.web",
    "langgraph_cs.scripts",
]

[tool.setuptools.package-data]
# 把 Web 静态资源（聊天页 / JS / CSS）一并打包，否则装好后 web 入口找不到页面。
"langgraph_cs.web" = ["static/*"]
